--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <body>
 
-    <script src="js/1_types.js"></script>
+    <!-- <script src="js/1_types.js"></script> -->
+    <script src="js/2_undefined.js"></script>
 </body>
 
 </html>
