39-3 Different Truthy and Falsy values in JavaScript

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
 
     <!-- <script src="js/1_types.js"></script> -->
-    <script src="js/2_undefined.js"></script>
+    <!-- <script src="js/2_undefined.js"></script> -->
+    <script src="js/3_true-false.js"></script>
 </body>
 
 </html>
