--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <!-- <script src="js/1_types.js"></script> -->
     <!-- <script src="js/2_undefined.js"></script> -->
-    <script src="js/3_true-false.js"></script>
+    <!-- <script src="js/3_true-false.js"></script> -->
+    <script src="js/4_triple.js"></script>
 </body>
 
 </html>
