--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <!-- <script src="js/1_types.js"></script> -->
     <!-- <script src="js/2_undefined.js"></script> -->
     <!-- <script src="js/3_true-false.js"></script> -->
-    <script src="js/4_triple.js"></script>
+    <!-- <script src="js/4_triple.js"></script> -->
+    <!-- <script src="js/5_scope.js"></script> -->
+    <!-- <script src="js/5-1_hoisting.js"></script> -->
+    <script src="js/6_closure.js"></script>
 </body>
 
 </html>
