39-7 (optional) Callback function and pass different functions

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- <script src="js/4_triple.js"></script> -->
     <!-- <script src="js/5_scope.js"></script> -->
     <!-- <script src="js/5-1_hoisting.js"></script> -->
-    <script src="js/6_closure.js"></script>
+    <!-- <script src="js/6_closure.js"></script> -->
+    <script src="js/7_callback.js"></script>
 </body>
 
 </html>
