39-8 (advanced) function arguments pass by reference pass by value

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <!-- <script src="js/5_scope.js"></script> -->
     <!-- <script src="js/5-1_hoisting.js"></script> -->
     <!-- <script src="js/6_closure.js"></script> -->
-    <script src="js/7_callback.js"></script>
+    <!-- <script src="js/7_callback.js"></script> -->
+    <!-- <script src="js/8_arguments.js"></script> -->
+    <script src="js/8-1_passby.js"></script>
 </body>
 
 </html>
